--- a/fibonacci/src/main/resources/application.properties
+++ b/fibonacci/src/main/resources/application.properties
@@ -1,1 +1,5 @@
 spring.application.name=fibonacci
+
+spring.h2.console.enabled=true
+spring.datasource.generate-unique-name=false
+spring.datasource.name=fibonacci
